# rosetta-cli

./: .env.example  README.md  pyproject.toml
rosetta/: __main__.py  api.py  cli.py  config.py  utils.py
test/: test_api.py  test_cli.py  test_utils.py
