[tool.poetry]
name = "rosetta"
version = "0.2.1"
description = "A CLI to translate phrases in others languages"
authors = ["William <williamribeiroo@gmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
urllib3 = "^1.26.15"
argparse = "^1.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
